added time dependent perturbation

--- a/time dependent/creategif.ipynb
+++ b/time dependent/creategif.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,7 +13,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -45,7 +45,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,7 +58,7 @@
     "\n",
     "paths= []\n",
     "for png in png_files:\n",
-    "    path = 'modl/' + png\n",
+    "    path = folder + '/' + png\n",
     "    paths.append(path)\n",
     "\n",
     "images = []\n",
